# license

./: Cargo.toml  README.md
src/: config.rs  licenses.rs  main.rs  utils.rs
src/templates/: bsd-2-clause.tmpl  bsd-3-clause.tmpl  mit.tmpl
