[package]
authors = ["Yagiz Degirmenci <yagizcanilbey1903@gmail.com>"]
edition = "2018"
name = "license"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.5.1"
serde = {version = "1.0", features = ["derive"]}
ureq = {version = "*", features = ["json"]}

[profile.release]
opt-level = 'z'
